opam-version: "1.2"
maintainer: "Yann Hamdaoui <yann.hamdaoui@gmail.com>"
authors: "Yann Hamdaoui <yann.hamdaoui@gmail.com>"
homepage: "https://github.com/yannham/mechaml"
bug-reports: "https://github.com/yannham/mechaml/issues"
license: "LGPL v3"
dev-repo: "git://github.com/yannham/mechaml.git"
build: [["jbuilder "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
build-doc: ["make doc"]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "cohttp" {>= "0.21.0" & < "2.0.0"}
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "lwt"
  "uri"
  "lambdasoup" {< "0.7.0"}
  "alcotest" {test & >= "0.8.0"}
]
available: [ocaml-version >= "4.03.0"]
