opam-version: "2.0"
maintainer: "Yann Hamdaoui <yann.hamdaoui@gmail.com>"
authors: "Yann Hamdaoui <yann.hamdaoui@gmail.com>"
homepage: "https://github.com/yannham/mechaml"
synopsis: "A functional web scraping library"
description: """
Mechaml is a functional web scraping library that allows to :
 - Fetch web content
 - Analyze, fill and submit HTML forms
 - Handle cookies, headers and redirections
"""
bug-reports: "https://github.com/yannham/mechaml/issues"
license: "LGPL-3.0-or-later"
dev-repo: "git+https://github.com/yannham/mechaml.git"
doc: "https://yannham.github.io/mechaml/"
tags: ["web" "scraping" "mechanize" "http" "client"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {>= "1.8.0"}
  "ocaml-syntax-shims" {build}
  "cohttp" {>= "0.21.0" & < "5.0.0"}
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "lwt"
  "uri"
  "lambdasoup" {< "0.8.0"}
  "alcotest" {with-test & >= "0.8.0"}
  "ocaml" {>= "4.03.0"}
]
